Switch to SLF4J
This will utilize the SLF4J API dependency everywhere. This will include the SLF4J log4j dependency for the sample applications so they continue to log using the provided log4j.properties or log4j.xml files.